--- a/gbt/main_sales.ipynb
+++ b/gbt/main_sales.ipynb
@@ -753,9 +753,9 @@
     "\n",
     "sigmas = [0, 10, 17, 50, 250, 1_000, 5_000, 25_000, 100_000]\n",
     "prior_weights = [0, 10, 20, 50, 100, 200, 500, 1000, 5000, 10000]\n",
-    "best_llh = 0\n",
     "last_weight = 0\n",
     "for sigma in sigmas:\n",
+    "    best_llh = 0\n",
     "    for prior_weight in prior_weights:\n",
     "        if prior_weight < last_weight:\n",
     "            continue\n",
@@ -832,7 +832,7 @@
    "hash": "a36b085e9ff735ee0fad94699c928a54e5528d32a02652250964e3ed6cb11995"
   },
   "kernelspec": {
-   "display_name": "adkdd",
+   "display_name": "Python Criteo (MOAB #45315)",
    "language": "python",
    "name": "python3"
   },
