--- a/gbt/main_clicks.ipynb
+++ b/gbt/main_clicks.ipynb
@@ -14,8 +14,8 @@
    "id": "d23732cd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-19T22:08:28.529014Z",
-     "start_time": "2021-11-19T22:08:11.373326Z"
+     "end_time": "2022-01-14T17:53:42.799790Z",
+     "start_time": "2022-01-14T17:53:41.886082Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "id": "bb8cc362",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-19T22:08:51.568266Z",
-     "start_time": "2021-11-19T22:08:28.531288Z"
+     "end_time": "2022-01-14T17:53:52.635610Z",
+     "start_time": "2022-01-14T17:53:42.801248Z"
     }
    },
    "outputs": [],
@@ -102,8 +102,8 @@
    "id": "c42854f4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-19T22:08:51.572837Z",
-     "start_time": "2021-11-19T22:08:51.570209Z"
+     "end_time": "2022-01-14T17:53:52.637277Z",
+     "start_time": "2022-01-14T17:53:41.612Z"
     }
    },
    "outputs": [],
@@ -143,8 +143,8 @@
    "id": "0908c8b6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-19T22:08:58.176749Z",
-     "start_time": "2021-11-19T22:08:58.156639Z"
+     "end_time": "2022-01-14T17:53:52.639001Z",
+     "start_time": "2022-01-14T17:53:42.274Z"
     }
    },
    "outputs": [],
@@ -324,8 +324,8 @@
    "id": "3789bcfb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-19T22:09:00.172234Z",
-     "start_time": "2021-11-19T22:09:00.168240Z"
+     "end_time": "2022-01-14T17:53:52.639607Z",
+     "start_time": "2022-01-14T17:53:42.891Z"
     }
    },
    "outputs": [],
@@ -362,8 +362,8 @@
    "id": "1ff06953",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-19T22:12:13.528515Z",
-     "start_time": "2021-11-19T22:12:13.519184Z"
+     "end_time": "2022-01-14T17:53:52.640231Z",
+     "start_time": "2022-01-14T17:53:43.802Z"
     }
    },
    "outputs": [],
@@ -426,6 +426,7 @@
     "        \"feature_fraction\": 0.7,\n",
     "        \"bagging_fraction\": 0.8,\n",
     "        \"deterministic\": True,\n",
+    "        \"force_col_wise\": True,\n",
     "    }\n",
     "\n",
     "    model = train(X_train, X_valid, y_train, y_valid, lgb_params)\n",
@@ -442,8 +443,8 @@
    "id": "73b2fe04",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-20T19:06:24.280178Z",
-     "start_time": "2021-10-20T19:01:49.582192Z"
+     "end_time": "2022-01-14T17:53:52.640888Z",
+     "start_time": "2022-01-14T17:53:47.596Z"
     },
     "scrolled": true
    },
@@ -472,8 +473,8 @@
    "id": "2a08789f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-20T23:16:21.038936Z",
-     "start_time": "2021-11-19T22:12:16.538876Z"
+     "end_time": "2022-01-14T17:52:09.702562Z",
+     "start_time": "2022-01-14T17:50:32.436Z"
     },
     "scrolled": false
    },
@@ -522,8 +523,8 @@
    "id": "b93ce07c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-11-21T20:19:06.134071Z",
-     "start_time": "2021-11-20T23:16:21.040435Z"
+     "end_time": "2022-01-14T17:52:09.703278Z",
+     "start_time": "2022-01-14T17:50:34.004Z"
     },
     "scrolled": false
    },
@@ -562,9 +563,9 @@
    "hash": "a36b085e9ff735ee0fad94699c928a54e5528d32a02652250964e3ed6cb11995"
   },
   "kernelspec": {
-   "display_name": "adkdd",
+   "display_name": "Python 3.6.8 64-bit ('.venv': venv)",
    "language": "python",
-   "name": "python3"
+   "name": "python368jvsc74a57bd0a36b085e9ff735ee0fad94699c928a54e5528d32a02652250964e3ed6cb11995"
   },
   "language_info": {
    "codemirror_mode": {
