--- a/gbt/main_sales.ipynb
+++ b/gbt/main_sales.ipynb
@@ -685,6 +685,8 @@
     "        \"num_leaves\": 10,\n",
     "        \"min_data_in_leaf\": 300,\n",
     "        \"extra_trees\": True,\n",
+    "        \"deterministic\": True,\n",
+    "        \"force_col_wise\": True,\n",
     "    }\n",
     "\n",
     "    model = train(X_train, X_valid, y_train, y_valid, lgb_params)\n",
